--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 		
 		<!-- 以下为页脚栏 -->
 		<div class="webFooter">
-			<p>小组成员：陈文菲、高志丹。</p>
+			<p>小组成员：Charlotte Chen、Darcy Gao。</p>
 		</div>
 		
 	</div>
